--- a/Front-End/index.html
+++ b/Front-End/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/FavIco.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WEB-LIS PathSys - Nuevo Frontend</title>
+    <title>LIME PathSys</title>
   </head>
   <body>
     <div id="app"></div>
